--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -14,6 +14,10 @@
       top: 23px;
       right: 33px;
     }
+    @media all and (min-width: 1200px) {
+      top: 22px;
+      left: 200px;
+    }
     @media all and (min-width: 1366px) {
       top: 24px;
       left: 200px;
@@ -24,7 +28,7 @@
   }
   &__title {
     display: none;
-    @media all and (min-width: 1366px) {
+    @media all and (min-width: 1200px) {
       position: absolute;
       left: 250px;
       top: 18px;
@@ -51,6 +55,9 @@
       }
       @media all and (min-width: 768px) {
         top: 20px;
+      }
+      @media all and (min-width: 1200px) {
+        right: -212px;
       }
       @media all and (min-width: 1366px) {
         right: 200px;
@@ -81,8 +88,6 @@
   @include flexRow();
   background-color: $color-background-white;
   height: 80px;
-  @media all and (min-width: 768px) {
-  }
   @media all and (min-width: 1366px) {
     @include flexRowFlexEnd();
     height: 75px;
@@ -107,6 +112,17 @@
   }
   &__title {
     display: none;
+    @media all and (min-width: 1200px) {
+      position: absolute;
+      left: 250px;
+      top: 18px;
+      display: inline-block;
+      font-family: $font-title;
+      font-weight: 500;
+      font-size: 25px;
+      color: $color-menu-hamb;
+      padding-right: 50px;
+    }
     @media all and (min-width: 1366px) {
       position: absolute;
       left: 250px;
@@ -131,6 +147,9 @@
         margin: 0 8px;
         top: 20px;
         right: 20px;
+      }
+      @media all and (min-width: 1200px) {
+        right: -212px;
       }
       @media all and (min-width: 1366px) {
         right: 200px;
