--- a/src/scss/layout/_main-home.scss
+++ b/src/scss/layout/_main-home.scss
@@ -14,6 +14,9 @@
   @media all and (min-width: 768px) {
     padding-top: 170px;
   }
+  @media all and (min-width: 1200px) {
+    padding-top: 95px;
+  }
   @media all and (min-width: 1366px) {
     padding-top: 80px;
   }
@@ -31,6 +34,9 @@
   }
   @media all and (min-width: 768px) {
     font-size: 50px;
+  }
+  @media all and (min-width: 1200px) {
+    font-size: 35px;
   }
   @media all and (min-width: 1366px) {
     font-size: 35px;
@@ -52,6 +58,10 @@
       font-size: 38px;
       margin-bottom: 40px;
     }
+    @media all and (min-width: 1200px) {
+      font-size: 28px;
+      margin-bottom: 50px;
+    }
     @media all and (min-width: 1366px) {
       font-size: 28px;
       margin-bottom: 22px;
@@ -71,7 +81,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    //align-items: center;
   }
   .eye {
     position: relative;
@@ -91,6 +101,10 @@
       @media all and (min-width: 768px) {
         font-size: 150px;
         margin: 0 -5px 0 -5px;
+      }
+      @media all and (min-width: 1200px) {
+        font-size: 100px;
+        margin: 0 74px 0 74px;
       }
       @media all and (min-width: 1366px) {
         font-size: 100px;
@@ -120,6 +134,11 @@
         top: -107px;
         font-size: 150px;
         margin: 0 -5px 0 -5px;
+      }
+      @media all and (min-width: 1200px) {
+        top: -78px;
+        font-size: 100px;
+        margin: 0 74px 0 74px;
       }
       @media all and (min-width: 1366px) {
         top: -70px;
@@ -221,6 +240,10 @@
         left: -59px;
         width: 142px;
       }
+      @media all and (min-width: 1200px) {
+        top: 19px;
+        left: 14px;
+      }
       @media all and (min-width: 1366px) {
         top: 21px;
         left: 11px;
@@ -245,6 +268,9 @@
         }
         @media all and (min-width: 768px) {
           font-size: 21px;
+        }
+        @media all and (min-width: 1200px) {
+          font-size: 14px;
         }
         @media all and (min-width: 1366px) {
           font-size: 14px;
@@ -278,7 +304,7 @@
               color: $color-font-white;
               opacity: 0.7;
             }
-    
+
             70% {
               color: $color-font-white;
               opacity: 1;
@@ -337,6 +363,10 @@
   @media all and (min-width: 768px) {
     font-size: 50px;
   }
+  @media all and (min-width: 1200px) {
+    font-size: 38px;
+    margin-right: 5px;
+  }
   @media all and (min-width: 1366px) {
     font-size: 38px;
     margin-right: 5px;
@@ -352,6 +382,10 @@
   text-align: center;
   top: -17px;
   left: 0;
+  @media all and (min-width: 1200px) {
+    top: -1px;
+    left: -1px;
+  }
   @media all and (min-width: 1920px) {
     top: -50px;
     left: -5px;
@@ -371,6 +405,9 @@
     @media all and (min-width: 768px) {
       font-size: 165px;
       margin-left: 7px;
+    }
+    @media all and (min-width: 1200px) {
+      font-size: 130px;
     }
     @media all and (min-width: 1366px) {
       font-size: 115px;
@@ -432,6 +469,10 @@
         left: -4px;
         top: 54px;
       }
+      @media all and (min-width: 1200px) {
+        left: -2px;
+        top: 39px;
+      }
       @media all and (min-width: 1366px) {
         left: -3px;
         top: 27px;
@@ -446,6 +487,9 @@
         }
         @media all and (min-width: 768px) {
           font-size: 21px;
+        }
+        @media all and (min-width: 1200px) {
+          font-size: 16px;
         }
         @media all and (min-width: 1366px) {
           font-size: 14px;
